# Django_hw

./: .gitignore  README.md  pyproject.toml
apps/base/: apps.py  urls.py  views.py
apps/fspy/hw1/: views.py
apps/fspy/hw2/: views.py
apps/fspy/hw3/: views.py
apps/fspy/hw4/: views.py
apps/fspy/hw5/: serializers.py  urls.py  views.py
apps/fspy/menu/: consts.py  urls.py  views.py
apps/menu/: apps.py  urls.py  views.py
base/: urls.py  views.py
base/templates/base/: base.html  menu.html
django_for_apis/: urls.py
django_for_apis/books/: apps.py  views.py
django_hw/: apps.py  settings.py  urls.py  views.py
django_hw/management/commands/: import_phones.py
hw1/: apps.py  urls.py  views.py
hw1/templates/hw1/: current_time.html  workdir.html
hw2/: admin.py  apps.py  models.py  urls.py  views.py
hw2/migrations/: 0001_initial.py
hw2/templates/hw2/: recipe.html  recipes.html
hw3/: apps.py  models.py  urls.py  views.py
hw3/management/commands/: import_phones.py
hw3/migrations/: 0001_initial.py
hw4/: admin.py  apps.py  articles.json  models.py  urls.py  views.py
hw4/migrations/: 0001_initial.py
hw5/: apps.py  serializers.py  urls.py  views.py
hw5/migrations/: 0001_initial.py
hw6/: apps.py  models.py  serializers.py  urls.py  views.py
hw6/migrations/: 0001_initial.py
hw7/: apps.py  models.py
templates/: base.html  menu.html
templates/hw1/: current_time.html  home.html  workdir.html
templates/hw2/: recipe.html  recipes.html  stops.html
templates/hw3/: phone.html  phones.html
templates/hw4/: courses.html
(+13 files in other folders)
